sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: not found: value i
    if (plusPetit(i+1,i)){echange(i,i+t);nain-=1}
                  ^AlgGnomeSort:6: error: not found: value i
    if (plusPetit(i+1,i)){echange(i,i+t);nain-=1}
                      ^AlgGnomeSort:6: error: not found: value i
    if (plusPetit(i+1,i)){echange(i,i+t);nain-=1}
                                  ^AlgGnomeSort:6: error: not found: value i
    if (plusPetit(i+1,i)){echange(i,i+t);nain-=1}
                                    ^AlgGnomeSort:6: error: not found: value t
    if (plusPetit(i+1,i)){echange(i,i+t);nain-=1}
                                      ^