sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var long = getNombreValeurs()
  var nain:Int= 1
  while (nain < long){
    if (plusPetit(i+1,i)){echange(i,i+t);nain-=1}
    else{nain+1}
  }
}